# ssh-reports-scraper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  SCRAPER_FLOW.md  build.py  docker-compose.yml  pyproject.toml  scheduler.py  scheduler_keyword_alert.py  scraper.py
docs/: ARCHITECTURE.md  GA_STATUS.md  LLM_PAIN_POINTS.md  LLM_REFACTORING_ROADMAP.md  architecture.md  changelog.md  pgsql-migration-to-ssh-library.md  secrets-env-standardization.md
enricher/: backfill_sync.py  enricher_manager.py  tag_extractor.py
models/: ConfigManager.py  FirmInfo.py  GeminiManager.py  PostgreSQLManager.py  SQLiteManager.py  TagExtractionManager.py  WebScraper.py  db_factory.py  firm_utils.py
modules/: BNKfn_23.py  DAOL_14.py  DBfi_19.py  DS_11.py  Daeshin_17.py  HANA_3.py  Hanwhawm_21.py  Heungkuk_28.py  Hmsec_9.py  Hygood_22.py  IBKs_25.py  KBsec_4.py  Kiwoom_10.py  Koreainvestment_13.py  Kyobo_24.py  LS_0.py  Leading_16.py  MERITZ_20.py  Miraeasset_8.py  NHQV_2.py  SKS_26.py  Samsung_5.py  Sangsanginib_6.py  ShinHanInvest_1.py  Shinyoung_7.py  TOSSinvest_15.py  Yuanta_27.py  eugenefn_12.py  iMfnsec_18.py
run/: fix_all_db.py  fix_all_db_background.sh  fix_daeshin_db.py  fix_hmsec_db.py  fix_ibk_db.py  fix_im_db.py  fix_kyobo_db.py  fix_meritz_db.py  fix_meritz_db_background.sh  (+9 more)
tools/sqlite-pg-cutover/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
tools/sqlite-pg-cutover/src/sqlite_pg_cutover/: __init__.py  cli.py  compare.py  copy.py  postgres.py  schema.py
tools/sqlite-pg-cutover/tests/: test_schema.py
(+108 files in other folders)
