[project]
name = "sqlite-pg-cutover"
version = "0.1.0"
description = "A pragmatic SQLite to PostgreSQL cutover toolkit: inspect, generate DDL, copy, compare."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "liante0904" }
]
keywords = ["sqlite", "postgresql", "migration", "cutover", "etl"]
dependencies = [
  "psycopg[binary]>=3.2.0",
]

[project.scripts]
sqlite-pg-cutover = "sqlite_pg_cutover.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
